--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "md5": "^2.3.0",
     "sass": "^1.69.5",
     "vite-plugin-banner": "^0.7.1",
-    "vitepress": "1.0.0-rc.31",
+    "vitepress": "1.3.1",
     "vue": "^3.3.9",
     "vue-baidu-analytics": "^2.2.0"
   },
@@ -42,6 +42,3 @@
     "element-plus": "^2.4.3"
   }
 }
-
-
-
