--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "dev": "vitepress dev --host",
-    "build": "vitepress build",
+    "build": "vitepress build --out public",
     "serve": "vitepress serve",
     "deploy": "npm run build && gh-pages -d dist",
     "backup": "git add . && git commit -m \"chore: backup\" && git push",
