update package.json build config

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "type": "module",
   "scripts": {
     "dev": "vitepress dev --host",
-    "build": "vitepress build --output public",
+    "build": "vitepress build --output docs/.vitepress/dist",
     "serve": "vitepress serve",
     "deploy": "npm run build && gh-pages -d dist",
     "backup": "git add . && git commit -m \"chore: backup\" && git push",
     "up": "npx npm-check-updates -u",
     "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
+    "docs:build": "vitepress build --output docs/.vitepress/dist",
     "docs:preview": "vitepress preview"
   },
   "repository": {
