--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "backup": "git add . && git commit -m \"chore: backup\" && git push",
     "up": "npx npm-check-updates -u",
     "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build --output dist",
+    "docs:build": "vitepress build --output docs/.vitepress/dist",
     "docs:preview": "vitepress preview"
   },
   "repository": {
