--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "backup": "git add . && git commit -m \"chore: backup\" && git push",
     "up": "npx npm-check-updates -u",
     "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build --output docs/.vitepress/dist",
-    "docs:preview": "vitepress preview"
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "repository": {
     "type": "git",
