--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@unocss/vite": "^66.3.3",
     "@vercel/analytics": "^1.5.0",
     "element-plus": "^2.4.3",
-    "unocss": "^66.3.3"
+    "unocss": "^66.3.3",
+    "unplugin-auto-import": "^19.3.0",
+    "unplugin-vue-components": "^28.8.0"
   }
 }
