--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agile-team-doc",
-  "version": ".1.0",
+  "version": "3.0.0",
   "homepage": "https://github.com/ChenyCHENYU/agile_team_doc",
   "description": "Robtot Admin，前端文档，项目管理文档，团队管理文档，专业管理文档",
   "author": "CHENY <ycyplus@gmail.com>",
