robot文档：开发环境搭建

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,11 @@
     "CHENYU",
     "giscus",
     "gitee",
+    "iconfont",
     "ntvs",
+    "Persistedstate",
     "Robtot",
+    "unocss",
     "vitepress"
   ]
 }
