--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,6 @@
   "framework": "vitepress",
   "buildCommand": "bun run build",
   "outputDirectory": "dist",
-  "installCommand": "bun install"
+  "installCommand": "bun install",
+  "cleanUrls": true
 }
