docs：甘特图组件文档

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,12 @@
 {
   "cSpell.words": [
+    "antv",
+    "beforeend",
     "CHENY",
     "CHENYU",
+    "codeing",
+    "dragable",
+    "gantt",
     "giscus",
     "gitee",
     "gitmoji",
@@ -9,9 +14,11 @@
     "iconify",
     "longpress",
     "ntvs",
+    "ombat",
     "Persistedstate",
     "Robtot",
     "unocss",
-    "vitepress"
+    "vitepress",
+    "Vtable"
   ]
 }
