--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   ],
   "dependencies": {
     "@giscus/vue": "^3.1.1",
-    "@vercel/analytics": "^1.5.0"
+    "@vercel/analytics": "^1.5.0",
+    "fabric": "^6.7.1"
   },
   "devDependencies": {
     "vitepress": "2.0.0-alpha.9"
